--- a/resources/template.html
+++ b/resources/template.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-<title>SAMR: *TITLE*</title>
+<title>SamR's Musings: *TITLE*</title>
 <link rel="stylesheet" href="resources/stylesheet.css" type="text/css">
 </head>
 <body>
