Add disclaimer to page template.

--- a/resources/template.html
+++ b/resources/template.html
@@ -21,6 +21,10 @@
 <footer>
 <div class="foot">
 <p>
+  The opinions stated herein are those of Samuel A. Rebelsky and do not
+  necessarily reflect those of Grinnell College.
+</p>
+<p>
   Copyright &copy; 2016 Samuel A. Rebelsky.
 </p>
 <p>
