--- a/resources/template.html
+++ b/resources/template.html
@@ -28,7 +28,7 @@
   Copyright &copy; 2016 Samuel A. Rebelsky.
 </p>
 <p>
-<a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Sam's Assorted Musings / Reflections: *TITLE*</span> by <span xmlns:cc="http://creativecommons.org/ns#" property="cc:attributionName">Samuel A. Rebelsky</span> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
+<a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title"><q>Sam's Assorted Musings / Reflections: *TITLE*</q></span> by <span xmlns:cc="http://creativecommons.org/ns#" property="cc:attributionName">Samuel A. Rebelsky</span> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
 </p>
 </div> <!-- foot -->
 </footer>
