Add WAVE link to template.

--- a/resources/template.html
+++ b/resources/template.html
@@ -25,6 +25,10 @@
   necessarily reflect those of Grinnell College.
 </p>
 <p>
+  Check this page's accessibility with
+  <a href="http://wave.webaim.org/refer">WAVE</a>.
+</p>
+<p>
   Copyright &copy; 2016 Samuel A. Rebelsky.
 </p>
 <p>
