--- a/resources/template.html
+++ b/resources/template.html
@@ -1,6 +1,6 @@
 <html lang="en">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>SamR's Musings: *TITLE*</title>
 <link rel="stylesheet" href="resources/stylesheet.css" type="text/css">
 </head>
