--- a/resources/template.html
+++ b/resources/template.html
@@ -1,42 +1,79 @@
+<!DOCTYPE html>
 <html lang="en">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>SamR's Musings: *TITLE*</title>
-<link rel="stylesheet" href="resources/stylesheet.css" type="text/css">
-</head>
-<body>
-<div class="page">
-<div class="head">
-<p class="site">Sam's Assorted Musings / Reflections</p>
-</div> <!-- head -->
+  <head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+  <title>SamR's Musings: *TITLE*</title>
+  <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">-->
+  <link rel="stylesheet" href="https://bootswatch.com/cosmo/bootstrap.min.css">
+  
+  <link rel="stylesheet" href="/~rebelsky/musings/css/theme.css">
+  <link rel="stylesheet" href="/~rebelsky/musings/css/theme-gray.css">
+  <link rel="stylesheet" href="/~rebelsky/musings/css/syntax.css">
+  <link rel="stylesheet" href="/~rebelsky/musings/css/print.css" media="print">
+  
+  <link rel="canonical" href="http://www.cs.grinnell.edu/~rebelsky/musings/~rebelsky/musings/contacting-faculty.html">
 
-<div class="body">
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <![endif]-->
+</head>
+
+  <body>
+    <a href="#content" class="sr-only sr-only-focusable">Skip to main content</a>
+<nav class="navbar navbar-inverse">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <div class="navbar-brand"><a style="color: white;" href="/~rebelsky/musings/">SamR's Assorted Musing and Rants</a><br>
+      </div>
+    </div> <!-- /.navbar-header -->
+    <div id="navbar" class="collapse navbar-collapse">
+      <ul class="nav navbar-nav">
+        <li><a href="index-by-number">By Number</a></li>
+        <li><a href="index-by-topic">By Topic</a></li>
+      </ul>
+    </div> <!-- /.nav-collapse -->
+  </div><!-- /.container -->
+</nav>
+
+<div class="container content" id="content" tabindex="-1">
+  <div class="row">
+    <div class="col-md-12">
 
 <h1>*TITLE*</h1>
 
 *BODY*
 
-</div> <!-- body -->
+    </div> <!-- /col-md-12 -->
+  </div> <!-- /row -->
+  <div class="row footer">
+    <div class="col-md-12">
+    <hr>
+    <p>
+      The opinions stated herein are those of Samuel A. Rebelsky and do not necessarily reflect those of Grinnell College, Grinnell's Computer Science Department, the Rebelsky family, or even most other people.
+    </p>
+    </p>
+      Check accessibility with <a href="http://wave.webaim.org/refer">WAVE</a>.
+    </p>
+    <p>
+      Copyright &copy; 2016-17 Samuel A. Rebelsky.
+    </p>
+    <p>
+      <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title"><q>Sam's Assorted Musings and Reflections: </q></span> by <span xmlns:cc="http://creativecommons.org/ns#" property="cc:attributionName">Samuel A. Rebelsky</span> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
+    </p>
+    </div> <!-- /col-md-12 -->
+  </div> <!-- footer -->
 
-<footer>
-<div class="foot">
-<p>
-  The opinions stated herein are those of Samuel A. Rebelsky and do not
-  necessarily reflect those of Grinnell College.
-</p>
-<p>
-  Check this page's accessibility with
-  <a href="http://wave.webaim.org/refer">WAVE</a>.
-</p>
-<p>
-  Copyright &copy; 2016-17 Samuel A. Rebelsky.
-</p>
-<p>
-<a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title"><q>Sam's Assorted Musings / Reflections: *TITLE*</q></span> by <span xmlns:cc="http://creativecommons.org/ns#" property="cc:attributionName">Samuel A. Rebelsky</span> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
-</p>
-</div> <!-- foot -->
-</footer>
-</div> <!-- page -->
-
+</div> <!-- /.container -->
 </body>
 </html>
