--- a/resources/template.html
+++ b/resources/template.html
@@ -9,10 +9,10 @@
   <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">-->
   <link rel="stylesheet" href="https://bootswatch.com/cosmo/bootstrap.min.css">
   
-  <link rel="stylesheet" href="/~rebelsky/musings/css/theme.css">
-  <link rel="stylesheet" href="/~rebelsky/musings/css/theme-gray.css">
-  <link rel="stylesheet" href="/~rebelsky/musings/css/syntax.css">
-  <link rel="stylesheet" href="/~rebelsky/musings/css/print.css" media="print">
+  <link rel="stylesheet" href="css/theme.css">
+  <link rel="stylesheet" href="css/theme-maroon.css">
+  <link rel="stylesheet" href="css/syntax.css">
+  <link rel="stylesheet" href="css/print.css" media="print">
   
   <link rel="canonical" href="http://www.cs.grinnell.edu/~rebelsky/musings/~rebelsky/musings/contacting-faculty.html">
 
@@ -34,7 +34,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <div class="navbar-brand"><a style="color: white;" href="/~rebelsky/musings/">SamR's Assorted Musing and Rants</a><br>
+      <div class="navbar-brand"><a style="color: white;" href="./">SamR's Assorted Musing and Rants</a><br>
       </div>
     </div> <!-- /.navbar-header -->
     <div id="navbar" class="collapse navbar-collapse">
@@ -69,7 +69,7 @@
       Copyright &copy; 2016-17 Samuel A. Rebelsky.
     </p>
     <p>
-      <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title"><q>Sam's Assorted Musings and Reflections: </q></span> by <span xmlns:cc="http://creativecommons.org/ns#" property="cc:attributionName">Samuel A. Rebelsky</span> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
+      <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title"><q>SamR's Assorted Musings and Rants: *TITLE*</q></span> by <span xmlns:cc="http://creativecommons.org/ns#" property="cc:attributionName">Samuel A. Rebelsky</span> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
     </p>
     </div> <!-- /col-md-12 -->
   </div> <!-- footer -->
