--- a/resources/template.html
+++ b/resources/template.html
@@ -6,14 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <title>SamR's Musings: *TITLE*</title>
-  <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">-->
+
   <link rel="stylesheet" href="https://bootswatch.com/cosmo/bootstrap.min.css">
-  
+ 
+  <link rel="stylesheet" href="css/theme-maroon.css"> 
   <link rel="stylesheet" href="css/theme.css">
-  <link rel="stylesheet" href="css/theme-maroon.css">
   <link rel="stylesheet" href="css/syntax.css">
   <link rel="stylesheet" href="css/print.css" media="print">
-  
+
   <link rel="canonical" href="http://www.cs.grinnell.edu/~rebelsky/musings/~rebelsky/musings/contacting-faculty.html">
 
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -34,15 +34,63 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <div class="navbar-brand"><a style="color: white;" href="./">SamR's Assorted Musing and Rants</a><br>
-      </div>
+      <span class="navbar-brand"><a style="color: white;" href="./">SamR's Assorted Musing and Rants</a></span>
     </div> <!-- /.navbar-header -->
+
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li><a href="index-by-number">By Number</a></li>
-        <li><a href="index-by-topic">By Topic</a></li>
+        <li><a href="index-by-number">Musings, by number</a></li>
+        <li><a href="index-by-topic">Musings, by topic</a></li>
+
+        <li class="dropdown">
+          <a href="index-technical" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Technical musings<span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="index-joc">The joy of code</a></li>
+            <li><a href="index-cnix">Thinking in C and Unix</a></li>
+            <li><a href="index-151">The new CSC 151</a></li>
+          </ul>
+        </li>
+
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">To be classified<span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="index-on-writing">On writing, or at least on writing these essays</a></li>
+            <li><a href="index-prospective-students">For prospective students, parents of prospective students, and others with similar interests</a></li>
+            <li><a href="index-prospective-faculty">For prospective faculty</a></li>
+            <li><a href="index-current-students">For current students, and others with similar interests</a></li>
+            <li><a href="index-alumni">For alumni, and for others who donate to the department</a></li>
+            <li><a href="index-thank-you">Thank-you notes</a></li>
+            <li><a href="index-teaching-online">On teaching online</a></li>
+            <li><a href="index-recommendations">On writing letters of recommendation</a></li>
+            <li><a href="index-grinnellians">Cool Grinnellians you should know (or know about)</a></li>
+            <li><a href="index-grinnell">Other essays on Grinnell</a></li>
+            <li><a href="index-incoming-chair">A letter to the incoming chair</a></li>
+          </ul>
+        </li>
+
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Autobiographical<span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="index-monthly">Monthly reflections</a></li>
+            <li><a href="index-overcommitment">On overcommitment</a></li>
+            <li><a href="index-autobiographical">Other autobiographical musings</a></li>
+          </ul>
+        </li>
+
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Everything else<span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="index-reviews">Reviews and notes about things I enjoy</a></li>
+            <li><a href="index-talks-speeches">Assorted talks and speeches</a></li>
+            <li><a href="index-important-issues">Reflections on some important issues</a></li>
+            <li><a href="index-rants">Rants</a></li>
+            <li><a href="index-removed">Essays I removed</a></li>
+            <li><a href="index-misc">Almost everything else</a></li>
+          </ul>
+        </li>
       </ul>
     </div> <!-- /.nav-collapse -->
+    
   </div><!-- /.container -->
 </nav>
 
@@ -71,9 +119,25 @@
     <p>
       <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title"><q>SamR's Assorted Musings and Rants: *TITLE*</q></span> by <span xmlns:cc="http://creativecommons.org/ns#" property="cc:attributionName">Samuel A. Rebelsky</span> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
     </p>
+<p>
+  This Web site was built using Markdown, some custom scripts, <a href="http://getbootstrap.com">Twitter Bootstrap</a>, and the <a href="https://bootswatch.com/cosmo/">Bootswatch Cosmo Theme</a>.
+</p>
     </div> <!-- /col-md-12 -->
   </div> <!-- footer -->
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+<script src='https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML'></script>
+<script>
+$(document).ready(function() {
+  $("#markdown-toc a").on('click', function(e) {
+  	// prevent default anchor click behavior
+  	e.preventDefault();
+  	// animate
+  	$('html, body').animate({ scrollTop: $(this.hash).offset().top - 60 }, 300, function(){ });
+  })
+});
+</script>
 </div> <!-- /.container -->
 </body>
 </html>
