--- a/resources/template.html
+++ b/resources/template.html
@@ -25,7 +25,7 @@
 
   <body>
     <a href="#content" class="sr-only sr-only-focusable">Skip to main content</a>
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-default">
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -34,7 +34,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <span class="navbar-brand"><a style="color: white;" href="./">SamR's Assorted Musing and Rants</a></span>
+      <span class="navbar-brand"><a href="./">SamR's Assorted Musing and Rants</a></span>
     </div> <!-- /.navbar-header -->
 
     <div id="navbar" class="collapse navbar-collapse">
