Extend the damn disclaimer.

--- a/resources/template.html
+++ b/resources/template.html
@@ -108,7 +108,7 @@
     <div class="col-md-12">
     <hr>
     <p>
-      The opinions stated herein are those of Samuel A. Rebelsky and do not necessarily reflect those of Grinnell College, Grinnell's Computer Science Department, the Rebelsky family, or even most other people.
+      The opinions stated herein are those of Samuel A. Rebelsky and do not necessarily reflect those of Grinnell College, Grinnell's Computer Science Department, the Rebelsky family, SIGCAS, SIGCSE, or even most other people.
     </p>
     </p>
       Check accessibility with <a href="http://wave.webaim.org/refer">WAVE</a>.
