Minor formatting update

--- a/resources/template.html
+++ b/resources/template.html
@@ -41,6 +41,7 @@
       <ul class="nav navbar-nav">
         <li><a href="index-by-number">Musings, by number</a></li>
         <li><a href="index-by-topic">Musings, by topic</a></li>
+        <li><a href="index-prospective-students">For prospective students</a></li>
 
         <li class="dropdown">
           <a href="index-technical" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Technical musings<span class="caret"></span></a>
@@ -55,7 +56,6 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">To be classified<span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="index-on-writing">On writing, or at least on writing these essays</a></li>
-            <li><a href="index-prospective-students">For prospective students, parents of prospective students, and others with similar interests</a></li>
             <li><a href="index-prospective-faculty">For prospective faculty</a></li>
             <li><a href="index-current-students">For current students, and others with similar interests</a></li>
             <li><a href="index-alumni">For alumni, and for others who donate to the department</a></li>
@@ -71,6 +71,7 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Autobiographical<span class="caret"></span></a>
           <ul class="dropdown-menu">
+            <li><a href="index-mixtapes">Mixtapes</a></li>
             <li><a href="index-monthly">Monthly reflections</a></li>
             <li><a href="index-overcommitment">On overcommitment</a></li>
             <li><a href="index-autobiographical">Other autobiographical musings</a></li>
