--- a/resources/template.html
+++ b/resources/template.html
@@ -34,7 +34,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <span class="navbar-brand"><a href="./">SamR's Assorted Musing and Rants</a></span>
+      <span class="navbar-brand"><a href="./">SamR's Assorted Musings and Rants</a></span>
     </div> <!-- /.navbar-header -->
 
     <div id="navbar" class="collapse navbar-collapse">
