Add ROF musing.

--- a/resources/template.html
+++ b/resources/template.html
@@ -85,6 +85,7 @@
             <li><a href="index-talks-speeches">Assorted talks and speeches</a></li>
             <li><a href="index-important-issues">Reflections on some important issues</a></li>
             <li><a href="index-rants">Rants</a></li>
+            <li><a href="index-rof">ROFs</a></li>
             <li><a href="index-removed">Essays I removed</a></li>
             <li><a href="index-misc">Almost everything else</a></li>
           </ul>
