Use local copy of bootstrap style.

--- a/resources/template.html
+++ b/resources/template.html
@@ -7,7 +7,11 @@
   
   <title>SamR's Musings: *TITLE*</title>
 
-  <link rel="stylesheet" href="https://bootswatch.com/readable/bootstrap.min.css">
+<!--
+  <link rel="stylesheet" href="https://bootswatch.com/3/readable/bootstrap.min.css">
+ -->
+
+  <link rel="stylesheet" href="resources/readable.min.css">
  
   <link rel="stylesheet" href="css/theme-maroon.css"> 
   <link rel="stylesheet" href="css/theme.css">
