--- a/resources/template.html
+++ b/resources/template.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="https://bootswatch.com/3/readable/bootstrap.min.css">
  -->
 
-  <link rel="stylesheet" href="resources/readable.min.css">
+  <link rel="stylesheet" href="css/readable.min.css">
  
   <link rel="stylesheet" href="css/theme-maroon.css"> 
   <link rel="stylesheet" href="css/theme.css">
