Update the template to get the right canonical URL.  Whoops!

--- a/resources/template.html
+++ b/resources/template.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="css/syntax.css">
   <link rel="stylesheet" href="css/print.css" media="print">
 
-  <link rel="canonical" href="http://www.cs.grinnell.edu/~rebelsky/musings/~rebelsky/musings/contacting-faculty.html">
+  <link rel="canonical" href="https://www.cs.grinnell.edu/~rebelsky/musings/~rebelsky/musings/*FILE*">
 
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!--[if lt IE 9]>
@@ -28,6 +28,13 @@
 </head>
 
   <body>
+  <!-- Hypothes.is -->
+  <script type="application/json" class="js-hypothesis-config">
+  {"showHighlights": false}
+  </script>
+  <script src="https://hypothes.is/embed.js" async></script>
+  <!-- /Hypothes.is -->
+
     <a href="#content" class="sr-only sr-only-focusable">Skip to main content</a>
 <nav class="navbar navbar-default">
   <div class="container">
