--- a/resources/template.html
+++ b/resources/template.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="css/syntax.css">
   <link rel="stylesheet" href="css/print.css" media="print">
 
-  <link rel="canonical" href="https://www.cs.grinnell.edu/~rebelsky/musings/~rebelsky/musings/*FILE*">
+  <link rel="canonical" href="https://www.cs.grinnell.edu/~rebelsky/musings/*FILE*">
 
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!--[if lt IE 9]>
