--- a/resources/template.html
+++ b/resources/template.html
@@ -133,7 +133,7 @@
       <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title"><q>SamR's Assorted Musings and Rants: *TITLE*</q></span> by <span xmlns:cc="http://creativecommons.org/ns#" property="cc:attributionName">Samuel A. Rebelsky</span> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
     </p>
 <p>
-  This Web site was built using Markdown, some custom scripts, <a href="http://getbootstrap.com">Twitter Bootstrap</a>, and the <a href="https://bootswatch.com/readable/">Bootswatch Readable Theme</a>.
+  This Web site was built using Markdown, some custom scripts, <a href="http://getbootstrap.com">Twitter Bootstrap</a>, and the <a href="https://bootswatch.com/3/readable/">Bootswatch Readable Theme</a>.
 </p>
     </div> <!-- /col-md-12 -->
   </div> <!-- footer -->
