--- a/resources/template.html
+++ b/resources/template.html
@@ -35,6 +35,7 @@
   <script src="https://hypothes.is/embed.js" async></script>
   <!-- /Hypothes.is -->
 
+  <div class="NOPRINT">
     <a href="#content" class="sr-only sr-only-focusable">Skip to main content</a>
 <nav class="navbar navbar-default">
   <div class="container">
@@ -106,10 +107,12 @@
     
   </div><!-- /.container -->
 </nav>
+</div> <!-- /NOPRINT -->
 
 <div class="container content" id="content" tabindex="-1">
   <div class="row">
     <div class="col-md-12">
+
 
 <h1>*TITLE*</h1>
 
