Atempt to eliminate hypothes.is in printed version

--- a/resources/template.html
+++ b/resources/template.html
@@ -28,12 +28,14 @@
 </head>
 
   <body>
+  <div class="NOPRINT">
   <!-- Hypothes.is -->
   <script type="application/json" class="js-hypothesis-config">
   {"showHighlights": false}
   </script>
   <script src="https://hypothes.is/embed.js" async></script>
   <!-- /Hypothes.is -->
+  </div>
 
   <div class="NOPRINT">
     <a href="#content" class="sr-only sr-only-focusable">Skip to main content</a>
