--- a/resources/template.html
+++ b/resources/template.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="css/theme-maroon.css"> 
   <link rel="stylesheet" href="css/theme.css">
   <link rel="stylesheet" href="css/syntax.css">
+  <link rel="stylesheet" href="css/musings.css">
   <link rel="stylesheet" href="css/print.css" media="print">
 
   <link rel="canonical" href="https://www.cs.grinnell.edu/~rebelsky/musings/*FILE*">
@@ -116,7 +117,7 @@
     <div class="col-md-12">
 
 
-<h1>*TITLE*</h1>
+<h1>*H1*</h1>
 
 *BODY*
 
