--- a/resources/template.html
+++ b/resources/template.html
@@ -127,7 +127,7 @@
     <div class="col-md-12">
     <hr>
     <p>
-      The opinions stated herein are those of Samuel A. Rebelsky and do not necessarily reflect those of Grinnell College, Grinnell's Computer Science Department, the Rebelsky family, SIGCAS, SIGCSE, or even most other sentient beings.
+      The opinions stated herein are those of Samuel A. Rebelsky and do not necessarily reflect those of Grinnell College, Grinnell's Computer Science Department, the Rebelsky family, CMD-IT, SIGCAS, SIGCSE, any other organizations I am or have been affiliated with, or even most other sentient beings.
     </p>
     </p>
       Check accessibility with <a href="http://wave.webaim.org/refer">WAVE</a>.
