Update template for a new year.

--- a/resources/template.html
+++ b/resources/template.html
@@ -30,12 +30,12 @@
 
   <body>
   <div class="NOPRINT">
-  <!-- Hypothes.is -->
+  <!-- Hypothes.is 
   <script type="application/json" class="js-hypothesis-config">
   {"showHighlights": false}
   </script>
   <script src="https://hypothes.is/embed.js" async></script>
-  <!-- /Hypothes.is -->
+  /Hypothes.is -->
   </div>
 
   <div class="NOPRINT">
@@ -133,7 +133,7 @@
       Check accessibility with <a href="http://wave.webaim.org/refer">WAVE</a>.
     </p>
     <p>
-      Copyright &copy; 2016-21 Samuel A. Rebelsky.
+      Copyright &copy; 2016&ndash;23 Samuel A. Rebelsky.
     </p>
     <p>
       <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title"><q>SamR's Assorted Musings and Rants: *TITLE*</q></span> by <span xmlns:cc="http://creativecommons.org/ns#" property="cc:attributionName">Samuel A. Rebelsky</span> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
